--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,7 +38,6 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/uuid": "^9.0.8",
-    "msw": "^2.3.1",
-    "msw-node": "^2.3.1"
+    "msw": "^2.3.1"
   }
 }
