--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,62 +1,31 @@
 version: '3.8'
 
 services:
-  # Next.js приложение
-  web:
-    build:
-      context: .
-      dockerfile: Dockerfile
+  bridge-app:
+    build: .
     ports:
       - "3000:3000"
     environment:
       - NODE_ENV=production
-      - DATABASE_URL=postgresql://postgres:password@db:5432/bridge_logistics
-      - JWT_SECRET=your_jwt_secret_here
+      - NEXT_PUBLIC_USER_ID=user-1
+      - JWT_SECRET=your-jwt-secret-here
+      - DATABASE_URL=postgresql://user:password@db:5432/bridge
     depends_on:
       - db
-      - redis
-    volumes:
-      - ./apps/web/public:/app/apps/web/public
     restart: unless-stopped
 
-  # PostgreSQL база данных
   db:
     image: postgres:15-alpine
     environment:
-      POSTGRES_DB: bridge_logistics
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      - POSTGRES_DB=bridge
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=password
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./packages/db/prisma/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432:5432"
     restart: unless-stopped
 
-  # Redis для кеширования
-  redis:
-    image: redis:7-alpine
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-    restart: unless-stopped
-
-  # MinIO для файлов
-  minio:
-    image: minio/minio:latest
-    ports:
-      - "9000:9000"
-      - "9001:9001"
-    environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin123
-    volumes:
-      - minio_data:/data
-    command: server /data --console-address ":9001"
-    restart: unless-stopped
-
-  # Nginx для прокси
   nginx:
     image: nginx:alpine
     ports:
@@ -66,10 +35,8 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf
       - ./ssl:/etc/nginx/ssl
     depends_on:
-      - web
+      - bridge-app
     restart: unless-stopped
 
 volumes:
   postgres_data:
-  redis_data:
-  minio_data:
