--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,6 @@
 # Dependencies
 node_modules/
 .pnpm-store/
-.pnpm-debug.log*
-
-# Build outputs
-dist/
-build/
-.next/
-out/
-.turbo/
 
 # Environment variables
 .env
@@ -17,7 +9,19 @@ out/
 .env.test.local
 .env.production.local
 
+# Build outputs
+.next/
+out/
+dist/
+build/
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
 # Logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -26,7 +30,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 # Runtime data
-pids
+pids/
 *.pid
 *.seed
 *.pid.lock
@@ -39,6 +43,7 @@ coverage/
 .nyc_output
 
 # Dependency directories
+node_modules/
 jspm_packages/
 
 # TypeScript cache
@@ -71,7 +76,6 @@ jspm_packages/
 
 # Next.js build output
 .next
-out
 
 # Nuxt.js build / generate output
 .nuxt
@@ -105,23 +109,17 @@ temp/
 ehthumbs.db
 Thumbs.db
 
-# Database
-*.db
-*.sqlite
-*.sqlite3
+# Prisma
+prisma/migrations/
+!prisma/migrations/.gitkeep
 
 # MinIO data
-minio-server/data/
+minio-data/
 
-# Test artifacts
+# Test files
 test-results/
 playwright-report/
 playwright/.cache/
 
-# Build artifacts
-*.tar.gz
-*.zip
-
 # Local development
 .local/
-dev.db
